--- a/style.css
+++ b/style.css
@@ -1,144 +1,165 @@
-/* html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}
-body{line-height:1; font-family: arial;}
-h1{font-size: 25px;}h2{font-size: 21px;}h3{font-size: 18px;}h4{font-size: 16px;}
-article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
-nav ul{list-style:none}
-blockquote,q{quotes:none}
-blockquote:before,blockquote:after,q:before,q:after{content:none}
-a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent}
-ins{background-color:#ff9;color:#000;text-decoration:none}
-mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold}
-del{text-decoration:line-through}
-abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}
-table{border-collapse:collapse;border-spacing:0}
-hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}
-input,select{vertical-align:middle} */
+style, section
 
-body,html {
-	background-color: #FFF;
+
+body {
+  max-width: 1000px;
+  margin: auto;
+  font-family: Arial, Helvetica, sans-serif !important;
 }
+
 header {
-    background: #AEC6CF;
-    padding: 20px 30px;
-    max-width: 940px;
-    margin: auto;
+  background: rgba(42, 100, 3, 0.973);
+  padding: 20px 30px;
+  max-width: 940px;
+  margin: auto;
+  font-family: Helvetica, Arial, sans-serif;
 }
-/* nav {
-    display: inline-block;
-}
-nav ul li a {
-    background: #EEE;
-    padding: 2px 10px;
-    font-size: 20px;
-    text-decoration: none;
-    font-weight: bold;
-    color: #444;
-    border-radius: 10px;
-}
-nav ul li a:hover {
-	background: #FFF;
-}
-nav ul li {
-    display: inline-block;
-    margin: 10px;
-}
-nav ul {
-    list-style: none;
-} */
 
-#style1 {
-    max-width: 1000px;
-    margin: auto;
-    border: none;
+h1 {   
+     background-color: rgba(42, 100, 3, 0.973);
+     font-weight: bold;
+     text-align: center;
+     font-family: Helvetica, Arial, sans-serif;
+       
 }
-main {
-	float: right;
-	width: 60%;
+
+h2 {   
+     font-family: Helvetica, Arial, sans-serif;
+     color: black;   
+  
 }
-aside {
-	float: left;
-	width: 30%;
+
+h3 {   
+  background-color: lightgreen;
+  font-family: Helvetica, Arial, sans-serif;
+  text-align: center;
+  color: black;   
+
 }
-article {
-    border-bottom: 2px dotted #999;
-    padding-bottom: 20px;
-    margin-bottom: 20px;
+
+h4 {   
+  background-color: lightgreen;
+  font-family: Helvetica, Arial, sans-serif;
+  text-align: center;
+  color: black;   
 }
-article h2 {
-    font-weight: normal;
-    margin-bottom: 12px;
+
+h5 {   
+  background-color: lightgreen;
+  font-weight: bold;
+  text-align: center;
+  font-family: Helvetica, Arial, sans-serif;
+    
 }
-article p {
-	
+article > p {
+    font-family: Arial, Helvetica, sans-serif; 
+    color: black;
+    text-align: left;
+    font-weight: lighter;
+    background-color: #00ff73;
+  
 }
-main section {
-	
+
+
+
+a {
+       font-style: italic;
+       font-weight: bolder;
+       margin-left: 5px;
+       color:rgb(255, 0, 106);
 }
-footer {
-	background: #AEC6CF;
-	max-width: 1000px;
-	margin: auto;
-	clear: both;
-	text-align: right;
-}
-footer p {
-	padding: 20px;
-}
-address {
-    padding: 10px 20px 30px 10px;
-}
-aside > div {
-	margin: 10px auto;
-	background: #AEC6CF;
-	min-height: 100px;
-}
+
 
 img {
-	max-width: 90%;
-	max-height: 100%;
+        border: 10px solid rgba(231, 43, 231, 0.932);
+        max-width: 90%;
+        max-height: 100%;
+        margin-right: 95%;
+        padding: 0px;        
 }
 
-.center {
-	display:block;
-	margin-left: auto;
-	margin-right: auto;
-	width:90%;
+table {  
+  width: 100%;
+  background-color: #ffffff;
+  border-spacing: 5px;
+  padding: 20px;
+  margin: 5px; 
+  border: 5px solid green;
+  border-collapse: separate;
 }
 
-#logo {
-    display: inline-block;
-    vertical-align: middle;
-    font-size: 30px;
-    margin-right: 75px;
-    color: #FFF;
+th {
+font-weight: bolder;
+color: black;
+padding: 10px;
+margin: 5px; 
+text-align: left;
+border-bottom: 10px #f1f1f1;
+border: 5px solid rgb(21, 255, 0);
 }
-#logo img {
-    width: 50px;
-    vertical-align: middle;
-    margin-right: 10px;
+
+td {
+font-weight: lighter;
+padding: 20px 10px;
+margin: right;
+text-align: left;
+border-bottom: 10px #f1f1f1;
+border: 5px solid green
 }
-body > section {
-    max-width: 1000px;
-    margin: auto;
-    padding: 30px 0px;
-    border-bottom: 1px solid #999;
-    color: #333;
+tr {
+color: black;
+margin-left: 10px;
+padding: 10px;
+border-spacing: 10px;
 }
 
 
-@media screen and (max-width: 1000px) {
-	body > section {
-		padding: 30px 20px;
-	}
+#title {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 30px;
+  margin-right: 75px;
+  color: #FFF;
 }
-@media screen and (max-width: 600px) {
-	main {
-		float: none;
-		width: 100%;
-	}
-	aside {
-		float: none;
-		width: 100%;
-	}
 
+#style_subheader {
+  max-width: 1000px;
+  margin: auto;
+  padding: 30px 0px;
+  border-bottom: 1px solid #999;
+  color: #333;
+  font-family: Helvetica, Arial, sans-serif;
+  background-color: lightgreen;
+}
+
+#style_imageText {
+  max-width: 1000px;
+  margin: auto;
+  border: none;
+}
+
+#style_references {
+  clear: both;
+  max-width:1000px;
+  margin: auto;
+  padding: 2px 0px;
+  border:none;
+  background: rgba(42, 100, 3, 0.973);
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+image_col {
+  float: left;
+  width: 30%;
+}
+
+image_col > div {
+  margin: 10px auto;
+  background: White;
+}
+
+text_col {
+  float: right;
+  width: 60%;
 }
