--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 style, section
 
 
-body {
+body, html {
   max-width: 1000px;
   margin: auto;
   font-family: Arial, Helvetica, sans-serif !important;
+  background-color: seashell;
 }
 
 header {
@@ -15,49 +16,17 @@ header {
   font-family: Helvetica, Arial, sans-serif;
 }
 
-h1 {   
-     background-color: rgba(42, 100, 3, 0.973);
-     font-weight: bold;
-     text-align: center;
-     font-family: Helvetica, Arial, sans-serif;
-       
-}
-
 h2 {   
      font-family: Helvetica, Arial, sans-serif;
      color: black;   
+     background-color: mediumaquamarine;
   
 }
 
-h3 {   
-  background-color: lightgreen;
-  font-family: Helvetica, Arial, sans-serif;
-  text-align: center;
-  color: black;   
-
-}
-
-h4 {   
-  background-color: lightgreen;
-  font-family: Helvetica, Arial, sans-serif;
-  text-align: center;
-  color: black;   
-}
-
-h5 {   
-  background-color: lightgreen;
-  font-weight: bold;
-  text-align: center;
-  font-family: Helvetica, Arial, sans-serif;
-    
-}
 article > p {
     font-family: Arial, Helvetica, sans-serif; 
     color: black;
     text-align: left;
-    font-weight: lighter;
-    background-color: #00ff73;
-  
 }
 
 
@@ -78,40 +47,6 @@ img {
         padding: 0px;        
 }
 
-table {  
-  width: 100%;
-  background-color: #ffffff;
-  border-spacing: 5px;
-  padding: 20px;
-  margin: 5px; 
-  border: 5px solid green;
-  border-collapse: separate;
-}
-
-th {
-font-weight: bolder;
-color: black;
-padding: 10px;
-margin: 5px; 
-text-align: left;
-border-bottom: 10px #f1f1f1;
-border: 5px solid rgb(21, 255, 0);
-}
-
-td {
-font-weight: lighter;
-padding: 20px 10px;
-margin: right;
-text-align: left;
-border-bottom: 10px #f1f1f1;
-border: 5px solid green
-}
-tr {
-color: black;
-margin-left: 10px;
-padding: 10px;
-border-spacing: 10px;
-}
 
 
 #title {
@@ -149,6 +84,18 @@ border-spacing: 10px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
+#style_qna {
+  clear: both;
+  max-width:1000px;
+  margin: auto;
+  padding: 2px 0px;
+}
+
+#style_answer {
+  padding: 0 0 10px 8rem;
+
+}
+
 image_col {
   float: left;
   width: 30%;
@@ -156,7 +103,6 @@ image_col {
 
 image_col > div {
   margin: 10px auto;
-  background: White;
 }
 
 text_col {
